--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,16 +28,16 @@ body {
   gap: 5rem;
   font-size: 1.8rem;
   margin-top: 5rem;
+}
 
-  > .link {
-    color: var(--white);
-    text-decoration: none;
+.link {
+  color: var(--white);
+  text-decoration: none;
+  transition: all 0.3s;
+
+  &:hover {
+    color: var(--light-coral);
     transition: all 0.3s;
-
-    &:hover {
-      color: var(--light-coral);
-      transition: all 0.3s;
-    }
   }
 }
 
@@ -60,7 +60,7 @@ body {
 .header {
   position: relative;
   padding: 0 16.5rem;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -77,9 +77,71 @@ body {
 
 .hamburger {
   display: none;
+}
+
+.hamburger,
+.closeBtn {
   background-color: transparent;
   border: 0;
   cursor: pointer;
+}
+
+.closeBtn > img {
+  width: 1.8rem;
+  height: 1.8rem;
+}
+
+.menu-backdrop {
+  visibility: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 99;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+  transition: all 0.2s;
+}
+
+.menu {
+  position: absolute;
+  right: 0;
+  transition: all 0.2s;
+  background-color: var(--police-blue);
+  max-width: 0px;
+  height: 100%;
+  list-style: none;
+  cursor: default;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  & > ul {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    padding: 0 5rem;
+    font-size: 1.8rem;
+    margin: 5.5rem 0;
+
+    & li:first-child {
+      align-self: flex-end;
+    }
+  }
+}
+
+.menu-bg-pattern {
+  transform: translateX(50%);
+}
+
+.showMenu {
+  visibility: visible;
+  background-color: rgba(0, 0, 0, 0.4);
+  & .menu {
+    max-width: 100%;
+  }
 }
 
 @media only screen and (max-width: 1200px) {
@@ -109,7 +171,7 @@ body {
     height: 3.2rem;
   }
 
-  .header-link {
+  .nav-bar .header-link {
     display: none;
   }
 }
