--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,8 @@ body {
   color: var(--white);
 }
 
-.container {
+.header-container,
+.teams-info {
   max-width: 144rem;
   margin: 0 auto;
 }
@@ -34,11 +35,11 @@ body {
   color: var(--white);
   text-decoration: none;
   transition: all 0.3s;
+}
 
-  &:hover {
-    color: var(--light-coral);
-    transition: all 0.3s;
-  }
+.link:hover {
+  color: var(--light-coral);
+  transition: all 0.3s;
 }
 
 .contact-us {
@@ -49,18 +50,18 @@ body {
   border-radius: 2.4rem;
   padding: 0.5em 1.5em;
   transition: all 0.3s;
+}
 
-  &:hover {
-    background-color: var(--white);
-    color: var(--midnight-green);
-    transition: all 0.3s;
-  }
+.contact-us:hover {
+  background-color: var(--white);
+  color: var(--midnight-green);
+  transition: all 0.3s;
 }
 
 .header {
   position: relative;
   padding: 0 16.5rem;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -117,19 +118,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
 
-  & > ul {
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-    padding: 0 5rem;
-    font-size: 1.8rem;
-    margin: 5.5rem 0;
+.menu ul {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  padding: 0 5rem;
+  font-size: 1.8rem;
+  margin: 5.5rem 0;
+}
 
-    & li:first-child {
-      align-self: flex-end;
-    }
-  }
+.menu ul li:first-child {
+  align-self: flex-end;
 }
 
 .menu-bg-pattern {
@@ -139,9 +140,10 @@ body {
 .showMenu {
   visibility: visible;
   background-color: rgba(0, 0, 0, 0.4);
-  & .menu {
-    max-width: 100%;
-  }
+}
+
+.showMenu .menu {
+  max-width: 100%;
 }
 
 @media only screen and (max-width: 1200px) {
