--- a/styles/home.css
+++ b/styles/home.css
@@ -241,6 +241,17 @@
   }
 }
 
+@media only screen and (max-width: 870px) {
+  .quotes-group {
+    grid-template-areas:
+      'header'
+      'figure1'
+      'figure2'
+      'figure3';
+    grid-row-gap: 7.2rem;
+  }
+}
+
 @media only screen and (max-width: 700px) {
   .teams-info {
     padding: 4rem 9.5rem;
@@ -263,6 +274,12 @@
     align-items: center;
     max-width: 40rem;
     margin: 4rem auto;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .quotes-group {
+    margin: 0 2.4rem;
   }
 }
 
