--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,12 @@ body {
   margin: 0 auto;
 }
 
+.heading-2 {
+  font-size: 4.8rem;
+  font-weight: 700;
+  line-height: 4.8rem;
+}
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -257,6 +263,12 @@ body {
   .header {
     padding-left: 4rem;
     padding-right: 4rem;
+  }
+}
+
+@media only screen and (max-width: 1180px) {
+  .heading-2 {
+    font-size: 3.2rem;
   }
 }
 
