--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@ body {
 .header,
 .teams-info,
 .quotes,
+.directors-info,
 .contact-us-content {
   max-width: 144rem;
   margin: 0 auto;
@@ -28,6 +29,20 @@ body {
   font-size: 4.8rem;
   font-weight: 700;
   line-height: 4.8rem;
+}
+
+.heading-3 {
+  color: var(--rapture-blue);
+  font-size: 1.8rem;
+  font-weight: 700;
+  line-height: 2.8rem;
+  margin-top: 2.4rem;
+}
+.job-position {
+  font-size: 1.3rem;
+  font-style: italic;
+  font-weight: 500;
+  line-height: 1.8rem;
 }
 
 .nav-bar {
