--- a/styles/about.css
+++ b/styles/about.css
@@ -104,6 +104,10 @@
   transition: all 0.3s;
 }
 
+.card figcaption {
+  text-align: center;
+}
+
 .card button:hover {
   transition: all 0.3s;
   background-color: var(--rapture-blue);
@@ -112,6 +116,8 @@
 .card figure img {
   border: 0.2rem solid #c4fffe;
   border-radius: 50%;
+  margin: 0 auto;
+  display: block;
 }
 
 .bg-pattern-3 {
