--- a/styles/about.css
+++ b/styles/about.css
@@ -93,6 +93,9 @@
 }
 
 .card button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   bottom: -2.8rem;
   cursor: pointer;
