--- a/styles/about.css
+++ b/styles/about.css
@@ -129,6 +129,46 @@
   right: 0;
 }
 
+.clients-container {
+  position: relative;
+  background-color: var(--sacramento-state-green);
+}
+
+.clients-content {
+  position: relative;
+  z-index: 1;
+  padding: 14rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 7rem;
+}
+
+.pattern-four {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.clients {
+  display: flex;
+  align-items: center;
+  gap: 9rem;
+}
+
+.clients img {
+  height: 2.8rem;
+}
+
+.clients .gadgets-now {
+  height: 4.5rem;
+}
+
+.clients .jakarta-post {
+  height: 2.3rem;
+}
+
 @media only screen and (max-width: 1200px) {
   .content {
     flex-direction: column;
@@ -148,6 +188,44 @@
 @media only screen and (max-width: 1180px) {
   .directors-info > .heading-2 {
     font-size: 4.8rem;
+  }
+
+  .clients {
+    gap: 6rem;
+  }
+
+  .clients img {
+    height: 1.7rem;
+  }
+
+  .clients .gadgets-now {
+    height: 2.8rem;
+  }
+
+  .clients .jakarta-post {
+    height: 1.4rem;
+  }
+
+  .pattern-four {
+    top: -10rem;
+  }
+
+  .clients-container {
+    overflow: hidden;
+  }
+
+  .clients-content {
+    padding: 8rem 0;
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .pattern-four {
+    left: -10rem;
+  }
+
+  .clients {
+    flex-direction: column;
   }
 }
 
