--- a/styles/about.css
+++ b/styles/about.css
@@ -85,11 +85,15 @@
 
 .card {
   position: relative;
-  background-color: var(--sacramento-state-green);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3.2rem 2.4rem 5.6rem;
+  min-height: 25rem;
+  min-width: 22.5rem;
+}
+
+.card-btn img {
+  pointer-events: none;
 }
 
 .card button {
@@ -105,6 +109,14 @@
   border: none;
   border-radius: 50%;
   transition: all 0.3s;
+}
+
+.card button.opened {
+  background-color: var(--rapture-blue);
+}
+
+.card button.opened:hover {
+  background-color: var(--light-coral);
 }
 
 .card figcaption {
@@ -144,6 +156,10 @@
   gap: 7rem;
 }
 
+.clients-content .heading-2 {
+  text-align: center;
+}
+
 .pattern-four {
   position: absolute;
   top: 0;
@@ -167,6 +183,64 @@
 
 .clients .jakarta-post {
   height: 2.3rem;
+}
+
+.back-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: rotateY(180deg);
+  background-color: var(--dark-green);
+}
+
+.card-quote {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+
+.card-holder {
+  background-color: transparent;
+  perspective: 1000px;
+  width: 100%;
+  height: 100%;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  /* transform: rotateY(180deg); */
+}
+
+.card-front {
+  background-color: var(--sacramento-state-green);
+}
+
+.card-inner .heading-3 {
+  margin-top: 0;
+}
+
+.socials .header-link:first-child {
+  margin-right: 1.7rem;
+}
+
+.socials .header-link {
+  display: inline;
+}
+
+.card-front,
+.back-card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  padding: 3.2rem 4.8rem;
 }
 
 @media only screen and (max-width: 1200px) {
@@ -252,5 +326,12 @@
 @media only screen and (max-width: 560px) {
   .bg-pattern-2 {
     top: -10rem;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .card-front,
+  .back-card {
+    padding: 3.2rem 1.8rem;
   }
 }
