--- a/styles/styles.css
+++ b/styles/styles.css
@@ -124,6 +124,7 @@ body {
 .closeBtn {
   background-color: transparent;
   border: 0;
+  padding: 0;
   cursor: pointer;
 }
 
@@ -163,6 +164,7 @@ body {
 .menu ul {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 5rem;
   padding: 0 5rem;
   font-size: 1.8rem;
