--- a/styles/styles.css
+++ b/styles/styles.css
@@ -416,3 +416,13 @@ body {
     display: none;
   }
 }
+
+@media only screen and (max-width: 300px) {
+  .showMenu .menu {
+    width: 100%;
+  }
+  .menu ul {
+    padding: 0 2rem;
+    align-items: center;
+  }
+}
