--- a/styles/home.css
+++ b/styles/home.css
@@ -111,6 +111,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  background-color: var(--deep-jungle-green);
 }
 
 .quotes {
